add_subdirectory(chargen_client)
add_subdirectory(chargen_server)
add_subdirectory(daytime_server)
add_subdirectory(discard_server)
add_subdirectory(echo_server)
add_subdirectory(server_modules)
add_subdirectory(server_module_msgs)
add_subdirectory(http_server)
add_subdirectory(server_inspector)
add_subdirectory(thread_pool)
add_subdirectory(udp_server)
add_subdirectory(udp_client)
